Update Dockerfile to fix CVE-2020-11022
- Set Travis CI to build using Ubuntu 22.04
- Mark /docs as a safe directory for Git. Refer link below.
  https://github.blog/2022-04-12-git-security-vulnerability-announced/
- Update Docker to Ubuntu 22.04 base
- Add sphinx_rtd_theme to site's conf.py as required by newer
  Sphinx versions
- This will fix CVE-2020-11022 as detected by GitHub IPAS scan

Signed-off-by: Atharva Lele <atharva.lele@intel.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: required
 
+dist: jammy
+
 services:
   - docker
 
@@ -8,9 +10,10 @@ before_install:
   - mkdir -p build publish
   - chmod 777 build publish
   - touch publish/.nojekyll
+  - export GIT_SAFE_DIR_CMD="git config --global --add safe.directory /docs" # Fix error caused by CVE-2022-24765 Git update
 
 script:
-  - docker run --rm -v ${PWD}:/docs -w /docs sbl_docs make publish BUILDDIR=/docs/build PUBLISHDIR=/docs/publish
+  - docker run --rm -v ${PWD}:/docs -w /docs sbl_docs /bin/bash -c "${GIT_SAFE_DIR_CMD} && make publish BUILDDIR=/docs/build PUBLISHDIR=/docs/publish"
 
 deploy:
   provider: pages
